--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <main>
+        <img src="./assets/images/wave-down.svg"/>
         <section class="container" id="overview-section">
             <div class="item">
-                <img src="./assets/images/wave-down.svg"/>
                 <h1> Hi, I'm James Durban.</h1>
                 <h2> I am an Apprentice Software Engineer working at Scott Brownrigg. </h2>
             </div>
@@ -41,53 +41,55 @@
                     <i class="fas fa-envelope-square fa-lg"></i>
                 </a>
             </div>
+            <div class="item">
+                <a href="#skills-section">
+                    <button class="header-link"> Skills </button>
+                </a>
+                <a href="#projects-section">
+                    <button class="header-link"> Projects </button>
+                </a>
+            </div>
+
         </section>
 
         <section class="container section" id="skills-section">
             <div class="item">
                 <h2><u>Experience & Skills</u></h2>
+                <p> 
+                    I've worked with a variety of languages, libraries and frameworks, building websites that include technologies such as TypeScript, Node.js, Reactjs, Express
+                    and more!
+                </p>
             </div>
-            <div class="left">
-                <div class="item">
-                    <h3>Frameworks & Languages I've Used</h3>
-                </div>
-                <div class="item skill-icons">
-                    <a title="Node.js"> <img src="assets/icons/nodejs.svg"> </a>
-                    <a title="Reactjs"> <img src="assets/icons/react.svg"> </a>
-                    <a title="Bootstrap"> <img src="assets/icons/bootstrap.svg"> </a>
-                    <a title="CSS3"> <img src="assets/icons/css3.svg"> </a>
-                    <a title="HTML5"> <img src="assets/icons/html5.svg"> </a>
-                </div>
-                <div class="item skill-icons">
-                    <a title="C++"><img src="assets/icons/cpp.svg"></a>
-                    <a title="Python"><img src="assets/icons/python.svg"></a>
-                    <a title="C#"><img src="assets/icons/csharp.svg"></a>
-                    <a title="TypeScript"><img src="assets/icons/typescript.svg"></a>
-                    <a title="JavaScript"><img src="assets/icons/javascript.svg"></a>
-                </div>
-                <div class="item skill-icons">
-                    <a title="Git"><img src="assets/icons/git.svg"></a>
-                    <a title="Powershell"><img src="assets/icons/powershell.svg"></a>
-                    <a title="Bash Shell"><img src="assets/icons/bash.svg"></a>
-                    <a title="Material UI"><img src="assets/icons/mui.svg"></a>
-                    <a title="Windows"><img src="assets/icons/windows.svg"></a>
-                </div>
-                <div class="item">
-                    <br/>
-                </div>
+            <div class="item">
+                <h3>Frameworks & Languages I've Used</h3>
             </div>
-
-            <div class="right">
-                <div class="item">
-                    <h3>Places I've Worked At</h3>
-                </div>
-                <div class="item skill-icons">
-                    <a title="Git"><img src="assets/icons/git.svg"></a>
-                    <a title="Powershell"><img src="assets/icons/powershell.svg"></a>
-                    <a title="Bash Shell"><img src="assets/icons/bash.svg"></a>
-                    <a title="Material UI"><img src="assets/icons/mui.svg"></a>
-                    <a title="Windows"><img src="assets/icons/windows.svg"></a>
-                </div>
+            <div class="item skill-icons">
+                <a href="https://www.nodejs.org" title="Node.js"> <img src="assets/icons/nodejs.svg"> </a>
+                <a href="https://www.reactjs.org" title="Reactjs"> <img src="assets/icons/react.svg"> </a>
+                <a href="https://getbootstrap.com/" title="Bootstrap"> <img src="assets/icons/bootstrap.svg"> </a>
+                <a href="https://en.wikipedia.org/wiki/CSS" title="CSS3"> <img src="assets/icons/css3.svg"> </a>
+                <a href="https://en.wikipedia.org/wiki/HTML5" title="HTML5"> <img src="assets/icons/html5.svg"> </a>
+            </div>
+            <div class="item skill-icons">
+                <a href="https://isocpp.org/" title="C++"><img src="assets/icons/cpp.svg"></a>
+                <a href="https://www.python.org/" title="Python"><img src="assets/icons/python.svg"></a>
+                <a href="https://dotnet.microsoft.com/languages/csharp" title="C#"><img src="assets/icons/csharp.svg"></a>
+                <a href="https://www.typescriptlang.org/" title="TypeScript"><img src="assets/icons/typescript.svg"></a>
+                <a href="https://www.javascript.com/" title="JavaScript"><img src="assets/icons/javascript.svg"></a>
+            </div>
+            <div class="item skill-icons">
+                <a href="https://git-scm.com/" title="Git"><img src="assets/icons/git.svg"></a>
+                <a href="https://docs.microsoft.com/en-us/powershell/" title="Powershell"><img src="assets/icons/powershell.svg"></a>
+                <a href="https://www.shellscript.sh/" title="Bash Shell"><img src="assets/icons/bash.svg"></a>
+                <a href="https://mui.com/" title="Material UI"><img src="assets/icons/mui.svg"></a>
+                <a href="https://github.com" title="GitHub"><img src="assets/icons/github.svg"></a>
+            </div>
+             
+            <div class="item">
+                <h3>Places I've Worked At</h3>
+            </div>
+            <div class="item skill-icons">
+                <a title="Scott Brownrigg"><img src="assets/images/scottbrownrigg.png"></a>
             </div>
         </section>
 
