--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <section class="container section" id="skills-section">
             <div class="item">
-                <h2><u>Experience & Skills</u></h2>
+                <h2><u>Skills & Experience</u></h2>
                 <p> 
                     I've worked with a variety of languages, libraries and frameworks, building websites that include technologies such as TypeScript, Node.js, Reactjs, Express
                     and more!
