--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <div id="root"></div>
 
         <script src="/src/index.tsx" type="module"></script>
+        <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
     </body>
 </html>
